@@ -1,3 +1,9 @@
+Version CVS HEAD (?)
+
+  * src/gigextract.cpp:
+    - show also version of libsndfile or build version of libaudiofile when
+      using the -v switch
+
 Version 2.0.0 (9 May 2005)
 
   * packaging changes:
